RESOLVED FIXED183995
r228149 accidentally removed code that resets m_emptyCursor at the end of a GC
https://bugs.webkit.org/show_bug.cgi?id=183995
Summary r228149 accidentally removed code that resets m_emptyCursor at the end of a GC
Saam Barati
Reported 2018-03-25 10:22:41 PDT
...
Attachments
patch (1.50 KB, patch)
2018-03-25 10:42 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2018-03-25 10:23:25 PDT
The consequence here is that we end up monotonically growing that cursor, which will eventually lead to us never stealing empty blocks.
Saam Barati
Comment 2 2018-03-25 10:42:22 PDT
Alexey Proskuryakov
Comment 3 2018-03-25 11:25:30 PDT
Is that a known flaky test? ** The following JSC stress test failures have been introduced: stress/ftl-put-by-id-setter-exception-interesting-live-state.js.no-cjit-collect-continuously
WebKit Commit Bot
Comment 4 2018-03-25 11:26:37 PDT
Comment on attachment 336495 [details] patch Clearing flags on attachment: 336495 Committed r229962: <https://trac.webkit.org/changeset/229962>
WebKit Commit Bot
Comment 5 2018-03-25 11:26:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-03-25 11:27:19 PDT
Saam Barati
Comment 7 2018-03-25 11:30:51 PDT
(In reply to Alexey Proskuryakov from comment #3) > Is that a known flaky test? > > > ** The following JSC stress test failures have been introduced: > stress/ftl-put-by-id-setter-exception-interesting-live-state.js.no-cjit- > collect-continuously Yes. I've seen it flake before. Do you know how to grab the crashlog from the bots? I'll file a bug or you can and assign it to me.
Alexey Proskuryakov
Comment 8 2018-03-25 12:09:20 PDT
There is no crash log on the bot, looks like the test aborts the process without crashing. Running stress/ftl-put-by-id-slow-exception-no-catch.js.no-cjit-collect-continuously stress/ftl-put-by-id-setter-exception-interesting-live-state.js.no-cjit-collect-continuously: Exception: Error42 Running stress/ftl-put-by-id-slow-exception-no-catch.js.dfg-eager Running stress/ftl-put-by-id-slow-exception-no-catch.js.dfg-eager-no-cjit-validate stress/ftl-put-by-id-setter-exception-interesting-live-state.js.no-cjit-collect-continuously: ERROR: Unexpected exit code: 3 FAIL: stress/ftl-put-by-id-setter-exception-interesting-live-state.js.no-cjit-collect-continuously
Alexey Proskuryakov
Comment 9 2018-03-25 12:10:30 PDT
Found an existing bug for that, bug 183266.
Note You need to log in before you can comment on or make changes to this bug.